Update Mejoras para soporte Java 17,switch en ModeloStrategy.generarRespuesta, Enum TipoPrompt, OllamaClient, buildConDelimitadores en PromptBuilder